--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
@@ -18,7 +19,6 @@
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-native": "0.63.3",
-    "react-native-audio": "^4.3.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-permissions": "^2.2.2",
     "react-native-reanimated": "^1.13.1",
