--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,12 +1,25 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
+
+
 platform :ios, '10.0'
 
 target 'Stromboard' do
   config = use_native_modules!
 
   use_react_native!(:path => config["reactNativePath"])
+
+
+  pod 'rn-fetch-blob',
+    :path => '../node_modules/rn-fetch-blob'
+
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-MediaLibrary', :path => "#{permissions_path}/MediaLibrary.podspec"
+  pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary.podspec"
+
+
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
   target 'StromboardTests' do
     inherit! :complete
